refactor: extract OpenWeatherProperties into application properties.