@@ -2,6 +2,7 @@ package de.training.wetterkafka.gateway.wettercontroller;
 
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.databind.JsonNode;
+import de.training.wetterkafka.gateway.openweatherclient.OpenWeatherProperties;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.http.ResponseEntity;
@@ -15,48 +16,47 @@ import java.util.List;
 
 @RestController
 public class WetterController {
-
-    // TODO: extract Weather client
-    // TODO: extract keys and urls in properties
     private final RestClient restClient;
+    private final OpenWeatherProperties properties;
 
     private static final Logger logger = LogManager.getLogger(WetterController.class);
 
-    public WetterController() {
-        this.restClient = RestClient.builder().baseUrl("http://api.openweathermap.org").build();
+    public WetterController(RestClient restClient, OpenWeatherProperties properties) {
+        this.restClient = restClient;
+        this.properties = properties;
     }
 
     @GetMapping("/weather/{cityName}")
     public ResponseEntity<JsonNode> weather(@PathVariable String cityName) {
-        String apiKey = "f67c2dad94e8ba5c46368c818b7796ac";
-        List<GeoLocation> geolocations = getGeolocationsByCityName(cityName);
-        GeoLocation firstGeolocation = geolocations.get(0);
+        GeoLocation firstGeolocation = getGeolocationsByCityName(cityName).getFirst();
         JsonNode jsonNode = restClient.get().uri(
                         uriBuilder -> uriBuilder
-                                .path("/data/2.5/weather")
+                                .path(properties.getWeatherByGeolocationEndpoint())
                                 .queryParam("lat", firstGeolocation.lat())
                                 .queryParam("lon", firstGeolocation.lon())
-                                .queryParam("appid", apiKey)
+                                .queryParam("appid", properties.getApiKey())
                                 .build())
-                .retrieve().body(JsonNode.class);
+                .retrieve()
+                .body(JsonNode.class);
 
         return ResponseEntity.ok(jsonNode);
     }
 
     private List<GeoLocation> getGeolocationsByCityName(String cityName) {
-        String apiKey = "f67c2dad94e8ba5c46368c818b7796ac";
         // TODO: Handle locations == null
-        GeoLocation[] locations = restClient.get()
-                .uri(uriBuilder -> uriBuilder
-                        .path("/geo/1.0/direct")
-                        .queryParam("q", cityName)
-                        .queryParam("limit", 5)
-                        .queryParam("appid", apiKey)
-                        .build())
-                .retrieve()
-                .body(GeoLocation[].class);
+        GeoLocation[] locations =
+            restClient.get()
+                    .uri(uriBuilder -> uriBuilder
+                            .path(properties.getGeolocationByCityEndpoint())
+                            .queryParam("q", cityName)
+                            .queryParam("limit", 5)
+                            .queryParam("appid", properties.getApiKey())
+                            .build())
+                    .retrieve()
+                    .body(GeoLocation[].class);
 
-        logger.info("Retrieved %d geolocations".formatted(locations.length));
+        String formatted = "Retrieved %d geolocations".formatted(locations.length);
+        logger.info(formatted);
 
         return Arrays.asList(locations);
     }
